syntax = "proto3";

package moarpb;

option go_package = "github.com/nadilas/moar/moarpb";

service ModuleRegistry {
  rpc GetUrl(GetUrlRequest) returns (GetUrlResponse);
  rpc CreateModule(CreateModuleRequest) returns (CreateModuleResponse);
  rpc GetModule(GetModuleRequest) returns (GetModuleResponse);
  rpc DeleteModule(DeleteModuleRequest) returns (DeleteModuleResponse);
  rpc UploadVersion(UploadVersionRequest) returns (UploadVersionResponse);
  rpc DeleteVersion(DeleteVersionRequest) returns (DeleteVersionResponse);
}

message GetModuleRequest {
  string moduleName = 1;
}

message GetModuleResponse {
  Module module = 1;
}

message GetUrlRequest {
  string moduleName = 1;
  oneof versionSelector {
    string versionConstraint = 2;
    string version = 3;
  }
}

message VersionResources {
  string scriptUri = 1;
  string styleUri = 2;
}

message GetUrlResponse {
  VersionResources uri = 1;
  Module module = 2;
  string selectedVersion = 3;
}

message CreateModuleRequest {
  string moduleName = 1;
  string author = 2;
  string language = 3;
}

message CreateModuleResponse {

}

message DeleteModuleRequest {
  string moduleName = 1;
}

message DeleteModuleResponse {

}

message UploadVersionRequest {
  string moduleName = 1;
  string version = 2;
  bytes fileData = 3;
  bytes styleData = 4;
}

message UploadVersionResponse {

}

message DeleteVersionRequest {
  string moduleName = 1;
  string version = 2;
}

message DeleteVersionResponse {

}

message Module {
  string name = 1;
  repeated Version versions = 2;
  string author = 3;
  string language = 4;
}

message Version {
  string value = 1;
  VersionResources resources = 2;
}